experiments/5c/63ae156e96a20ce96570d4bd2c48a9c8170a9d/error
MESSAGE: Execution of "./build_llvm_project.sh" failed

STDOUT:
[1648/2781] Copying clang's __clang_cuda_builtin_vars.h...
[1649/2781] Copying clang's __clang_cuda_math.h...
[1650/2781] Copying clang's __clang_cuda_cmath.h...
[1651/2781] Copying clang's __clang_cuda_complex_builtins.h...
[1652/2781] Copying clang's __clang_cuda_intrinsics.h...
[1653/2781] Copying clang's __clang_cuda_device_functions.h...
[1654/2781] Copying clang's __clang_cuda_libdevice_declares.h...
[1655/2781] Copying clang's __clang_cuda_math_forward_declares.h...
[1656/2781] Copying clang's __clang_hip_libdevice_declares.h...
[1657/2781] Copying clang's __clang_cuda_runtime_wrapper.h...
[1658/2781] Copying clang's __clang_hip_runtime_wrapper.h...
[1659/2781] Copying clang's __clang_hip_math.h...
[1660/2781] Copying clang's cetintrin.h...
[1661/2781] Copying clang's cet.h...
[1662/2781] Copying clang's cldemoteintrin.h...
[1663/2781] Copying clang's clzerointrin.h...
[1664/2781] Copying clang's cpuid.h...
[1665/2781] Copying clang's clflushoptintrin.h...
[1666/2781] Copying clang's clwbintrin.h...
[1667/2781] Copying clang's emmintrin.h...
[1668/2781] Copying clang's enqcmdintrin.h...
[1669/2781] Copying clang's f16cintrin.h...
[1670/2781] Copying clang's float.h...
[1671/2781] Copying clang's fma4intrin.h...
[1672/2781] Copying clang's fmaintrin.h...
[1673/2781] Copying clang's fxsrintrin.h...
[1674/2781] Copying clang's gfniintrin.h...
[1675/2781] Copying clang's htmintrin.h...
[1676/2781] Copying clang's htmxlintrin.h...
[1677/2781] Copying clang's ia32intrin.h...
[1678/2781] Copying clang's immintrin.h...
[1679/2781] Copying clang's inttypes.h...
[1680/2781] Copying clang's intrin.h...
[1681/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Analysis.cpp.o
[1682/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Assembler.cpp.o
[1683/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGAtomic.cpp.o
[1684/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/BenchmarkResult.cpp.o
[1685/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGBlocks.cpp.o
[1686/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/BenchmarkRunner.cpp.o
[1687/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/CodeTemplate.cpp.o
[1688/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Clustering.cpp.o
[1689/2781] Copying clang's s390intrin.h...
[1690/2781] Copying clang's shaintrin.h...
[1691/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/Error.cpp.o
[1692/2781] Copying clang's smmintrin.h...
[1693/2781] Copying clang's stdalign.h...
[1694/2781] Copying clang's stdarg.h...
[1695/2781] Building CXX object tools/llvm-exegesis/lib/CMakeFiles/LLVMExegesis.dir/LatencyBenchmarkRunner.cpp.o
[1696/2781] Copying clang's stdatomic.h...
[1697/2781] Copying clang's stdbool.h...
[1698/2781] Copying clang's stddef.h...
[1699/2781] Copying clang's __stddef_max_align_t.h...
[1700/2781] Copying clang's stdnoreturn.h...
[1701/2781] Copying clang's stdint.h...
[1702/2781] Copying clang's tbmintrin.h...
[1703/2781] Copying clang's tgmath.h...
[1704/2781] Copying clang's tmmintrin.h...
[1705/2781] Copying clang's tsxldtrkintrin.h...
[1706/2781] Copying clang's unwind.h...
[1707/2781] Copying clang's vadefs.h...
[1708/2781] Copying clang's vaesintrin.h...
[1709/2781] Copying clang's vpclmulqdqintrin.h...
[1710/2781] Copying clang's varargs.h...
[1711/2781] Copying clang's waitpkgintrin.h...
[1712/2781] Copying clang's vecintrin.h...
[1713/2781] Copying clang's wasm_simd128.h...
[1714/2781] Copying clang's wbnoinvdintrin.h...
[1715/2781] Copying clang's wmmintrin.h...
[1716/2781] Copying clang's __wmmintrin_aes.h...
[1717/2781] Copying clang's __wmmintrin_pclmul.h...
[1718/2781] Copying clang's x86intrin.h...
[1719/2781] Copying clang's xmmintrin.h...
[1720/2781] Copying clang's xopintrin.h...
[1721/2781] Copying clang's xsavecintrin.h...
[1722/2781] Copying clang's xsaveintrin.h...
[1723/2781] Copying clang's xsaveoptintrin.h...
[1724/2781] Copying clang's xsavesintrin.h...
[1725/2781] Copying clang's cuda_wrappers/algorithm...
[1726/2781] Copying clang's xtestintrin.h...
[1727/2781] Copying clang's cuda_wrappers/complex...
[1728/2781] Copying clang's cuda_wrappers/new...
[1729/2781] Copying clang's ppc_wrappers/mmintrin.h...
[1730/2781] Copying clang's ppc_wrappers/mm_malloc.h...
[1731/2781] Copying clang's ppc_wrappers/xmmintrin.h...
[1732/2781] Copying clang's ppc_wrappers/emmintrin.h...
[1733/2781] Copying clang's ppc_wrappers/pmmintrin.h...
[1734/2781] Copying clang's ppc_wrappers/tmmintrin.h...
[1735/2781] Copying clang's ppc_wrappers/smmintrin.h...
[1736/2781] Copying clang's openmp_wrappers/math.h...
[1737/2781] Copying clang's openmp_wrappers/cmath...
[1738/2781] Copying clang's openmp_wrappers/complex.h...
[1739/2781] Copying clang's openmp_wrappers/complex...
[1740/2781] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[1741/2781] Building arm_fp16.h...
[1742/2781] Copying clang's openmp_wrappers/new...
[1743/2781] Building arm_bf16.h...
[1744/2781] Copying clang's arm_fp16.h...
[1745/2781] Copying clang's arm_bf16.h...
[1746/2781] Building arm_cde.h...
[1747/2781] Copying clang's arm_cde.h...
[1748/2781] Building X86GenSubtargetInfo.inc...
[1749/2781] Generating VCSVersion.inc
[1750/2781] Building arm_sve.h...
[1751/2781] Building arm_mve.h...
[1752/2781] Building arm_neon.h...
[1753/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallLowering.cpp.o
[1754/2781] Building CXX object lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o
FAILED: lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++  -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Passes -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-redundant-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -MF lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o.d -o lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: In destructor ‘virtual llvm::IRChangePrinter::~IRChangePrinter()’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:341:46: error: no matching function for call to ‘llvm::IRChangePrinter::~IRChangePrinter()’
  341 |   ChangePrinter<std::string>::~ChangePrinter();
      |                                              ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note: candidate: ‘llvm::ChangePrinter<IRUnitT>::~ChangePrinter() [with IRUnitT = std::__cxx11::basic_string<char>]’
  334 | template <typename IRUnitT> ChangePrinter<IRUnitT>::~ChangePrinter<IRUnitT>() {
      |                             ^~~~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note:   candidate expects 1 argument, 0 provided
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: At global scope:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:418:2: warning: extra ‘;’ [-Wpedantic]
  418 | };
      |  ^
[1755/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallFrameOptimization.cpp.o
[1756/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AvoidTrailingCall.cpp.o
[1757/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallingConv.cpp.o
[1758/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AsmPrinter.cpp.o
[1759/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CmovConversion.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
56.50user 5.87system 0:14.40elapsed 432%CPU (0avgtext+0avgdata 541900maxresident)k
0inputs+962944outputs (25major+2596320minor)pagefaults 0swaps
